Sat Sep  9 21:28:29 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Document.cc (getParsable): Fix a bug with earlier
	change--if no parser is found and the MIME type is not text/* then
	return a NULL parser.

	* htdig/Retriever.cc (RetrievedDocument): If a NULL parser is
	returned, mark the document as noindex and move on.

	* configure.in, configure (enable-tests): Fix bug that would run 
	the 'yes' program inside the configure script if --enable-tests 
	was set.

Sat Sep  9 17:50:11 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/defaults.cc: Add "all" program listing for common
	attributes--seems more logical esp. now with many httool programs.

	* htdoc/cf_generate.pl (cf_byprog): Do not output a link when
	'prog' is 'all.'

	* htdoc/attrs.html, cf_by{name,prog}.html: Reran cf_generate.pl.

Sat Sep  9 11:44:47 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* aclocal.m4 (AM_CHECK_YACC): New macro to check for bison/yacc
	and use "missing yacc" if not found.

	* configure.in (enable_tests): Fix buglet where --enable-tests=no
	or --disable-tests would not work and set the default to enabled
	tests. Since the tests do not build unless the user does a "make
	check" this should not be confusing and should help debugging.
	Also use AM_CHECK_YACC instead of AC_CHECK_YACC.

	* configure: Regenerate using autoconf.

Sat Sep  9 11:01:03 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/ExternalParser.cc (canParse): Lowercase content-types and
	strip off any trailing semicolons. Should prevent problems with
	combined content-type; charset values.
	(ctor): As above.

	* htdig/Document.cc (getParsable): Only assume plain text if MIME
	code starts with text/. Should prevent problems with retrieving
	things like image/png or application/postscript as text.

Fri Sep  8 22:59:10 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/defaults.cc: Add new attributes htnotify_replyto,