@@ -1,3 +1,8 @@
+Mon Sep 11 11:56:44 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htdig/ExternalParser.cc (parse): Lowercase content-types and
+	strip off any trailing semicolons, at one last spot which Geoff missed. 
+
 Sat Sep  9 21:28:29 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>
 
 	* htdig/Document.cc (getParsable): Fix a bug with earlier
